# Mailing_management_service

./: .env.example  Procfile  README.md  pyproject.toml
config/: settings.py  urls.py
mailing/: admin.py  apps.py  forms.py  models.py  scheduler.py  services.py  urls.py  views.py
mailing/management/commands/: run_scheduler.py  send_mailings.py
mailing/migrations/: 0001_initial.py  0002_initial.py
mailing/templates/mailing/: attempt_list.html  home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  recipient_confirm_delete.html  recipient_detail.html  recipient_form.html  recipient_list.html
templates/: base.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: creategroups.py
users/migrations/: 0001_initial.py  0002_alter_user_managers_user_is_superuser.py
users/templates/users/: login.html  profile.html  register.html
