[tool.poetry]
name = "mailing-management-service"
version = "0.1.0"
description = ""
authors = ["Nika Alexandrovna <megrelynika@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
poetry-core = "^2.2.1"
django = "^5.2.7"
python-dotenv = "^1.2.1"
django-countries = "^7.6.1"
redis = "^7.0.1"
pillow = "^12.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
