[tool.poetry]
name = "mailing-management-service"
version = "0.1.0"
description = ""
authors = ["Nika Alexandrovna <megrelynika@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
poetry-core = "^2.2.1"
django = "^5.2.7"
python-dotenv = "^1.2.1"
django-countries = "^7.6.1"
redis = "^7.0.1"
pillow = "^12.0.0"
django-apscheduler = "^0.7.0"
django-redis = "^6.0.0"
psycopg2-binary = "^2.9.11"
flake8 = "^7.3.0"
black = "^25.9.0"
isort = "^7.0.0"
django-crispy-forms = "^2.4"
crispy-bootstrap5 = "^2025.6"


[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
honcho = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
